# maou

./: .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_PHASE_1-3.md  PLAN.md  README.md  count_unique_positions.py  pyproject.toml  serena.toml  test_actual_display.py  test_data_dousu.kif  test_preprocess.py
.cargo/: config.toml
.claude/: settings.json
.codex/: AGENT_GUIDE.md  COMMANDS.md  SNIPPETS.md  config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.serena/: project.yml
docs/: TRAINING_INVESTIGATION_REPORT.md  adr-001-dataloader-multiprocessing-optimization.md  adr-002-disk-based-preprocessing-with-sqlite.md  adr-003-training-performance-optimization-attempts.md  adr-004-arrow-ipc-migration.md  adr-005-move-win-rates.md  architecture.md  aws_sync_boto3.md  browser-automation.md  code-quality.md  command_design_template.md  dependency_management.md  epic-game-tree.md  git-workflow.md  learning-rate-tuning.md  llm_memory_bank.md  loss-functions.md  memory-architecture.md  newcomer-guide.md  performance.md  polars-prebuilt-investigation.md  rust-backend.md  rust-build-optimization.md  serena-token-efficiency.md  stage2-speed-investigation.md  stage3-hang-investigation.md  testing-guide.md  torch-compile-state-dict.md  uv-cuda-cpu-extra-investigation.md
reviews/: 2026-05-29-dfpn-19k-holistic-redesign.md  2026-05-30-dfpn-29te-false-nomate-dml-fix.md  2026-05-30-dfpn-29te-holistic-rederivation-findings.md  2026-05-30-dfpn-29te-scope-disproof-root-fix.md  2026-05-30-dfpn-minimal-proof-hand-findings.md  2026-06-02-dfpn-phase33-le-path-sound.md  2026-06-03-campaign-compass-layer.md  2026-06-05-claude-md-slow-table-and-midv3-39te-gap.md  2026-06-05-deprecate-mid-midv2-pns.md  2026-06-14-dfpn-stage0-kh-searchimpl-port-map.md  2026-06-20-dfpn-incremental-effect-tables.md  2026-06-21-kh-faithful-non-memory-bound-restructure.md  2026-06-22-deprecate-mid-v3-unify-mid-v4.md  2026-06-22-memory-system-enforcement-reform.md  2026-06-22-test-single-thread-requirement.md  2026-06-23-rename-dfpn-pure-technical.md  2026-06-24-tsume-solver-docs-new-mid-rewrite.md  2026-06-26-find-shortest-aigoma-doc-update.md  2026-06-30-39te-oracle-reference-doc.md  2026-07-01-aigoma-doc-anA-search-change.md  2026-07-02-claude-md-slow-table-anchors.md  2026-07-02-ghi-false-proof-verify-authoritative.md  2026-07-02-ghi-rediagnosis-verify-memo-fix.md  2026-07-02-tsume-docs-implementation-fidelity.md  2026-07-03-find-shortest-unknown-and-length-naming.md  2026-07-03-longmate-repetition-gc.md  2026-07-03-tsume-docs-trim-campaign-refs.md  2026-07-03-tsume-python-binding-and-legacy-cleanup.md  2026-07-08-position-search-benchmarking-doc.md  2026-07-08-position-search-design-draft.md  2026-07-08-rust-backend-crate-list.md  2026-07-08-rust-backend-shogi-tree.md  2026-07-09-search-cli-command.md  2026-07-09-search-warmup-colab-procedure.md  (+19 more)
rust/maou_convert/: Cargo.toml
rust/maou_convert/src/: batch.rs  date.rs  decode.rs  lib.rs  pipeline.rs
rust/maou_io/: Cargo.toml
rust/maou_io/src/: arrow_io.rs  error.rs  lib.rs  schema.rs  sparse_array.rs
rust/maou_rust/: Cargo.toml  rust-analyzer.toml
rust/maou_rust/src/: lib.rs  maou_convert.rs  maou_index.rs  maou_io.rs  maou_search.rs  maou_shogi.rs  maou_usi.rs
rust/maou_search/: Cargo.toml
rust/maou_search/examples/: nps_bench.rs  onnx_bench.rs
rust/maou_search/src/: evaluator.rs  feature.rs  label.rs  lib.rs  onnx.rs  position.rs  preprocess.rs  repetition.rs  search.rs  tree.rs
rust/maou_search/tests/: make_tiny_onnx.py  parity.rs
rust/maou_search/tests/fixtures/: label_table_golden.txt  positions_golden.txt
rust/maou_shogi/: Cargo.toml  generate_fixtures.py
rust/maou_shogi/.serena/: project.yml
rust/maou_shogi/.serena/memories/: dfpn_solver_structure_analysis.md
rust/maou_shogi/src/: attack.rs  bitboard.rs  board.rs  dfpn.rs  feature.rs  hcp.rs  lib.rs  movegen.rs  moves.rs  piece.rs  position.rs  sfen.rs  types.rs  zobrist.rs
rust/maou_shogi/src/dfpn/: api.rs  check_cache.rs  delayed_move_list.rs  entry.rs  heuristics.rs  kh_local_expansion.rs  local_expansion.rs  mate1ply.rs  mate_len.rs  mid.rs  mid_v2.rs  mid_v3.rs  mid_v4.rs  mod.rs  node_movegen.rs  path_key.rs  path_stack.rs  pns.rs  profile.rs  proof_hand.rs  pv.rs  repetition_memo.rs  search_result.rs  solver.rs  tests.rs  tt.rs  tt_v4.rs  ttentry.rs
rust/maou_shogi/src/dfpn/movegen/: check_cache.rs  delayed_move_list.rs  mate1ply.rs  mod.rs
rust/maou_shogi/src/dfpn/search/: expansion.rs  mod.rs  pv.rs
rust/maou_shogi/src/dfpn/tt/: entry.rs  mod.rs
rust/maou_shogi/src/kifu/: csa.rs  hcpe.rs  kif.rs  mod.rs  record.rs
rust/maou_shogi/tests/: fixture_tests.rs  kifu_parity.rs
rust/maou_shogi/tests/fixtures/: feature_fixtures.json  hcp_fixtures.json  legal_move_fixtures.json  move_fixtures.json  sfen_fixtures.json  special_rule_fixtures.json
rust/maou_shogi/tests/fixtures/kifu/: csa_handicap_pi.csa  csa_handicap_pi.golden.txt  csa_illegal_move.csa  csa_illegal_move.golden.txt  csa_inline_comment.csa  csa_inline_comment.golden.txt  csa_multi_game.csa  csa_multi_game.golden.txt  csa_rows_kachi.csa  csa_rows_kachi.golden.txt  kif_edge_basic.golden.txt  kif_edge_basic.kifu  kif_edge_handicap.golden.txt  kif_edge_handicap.kifu  kif_edge_illegal_lose_b.golden.txt  kif_edge_illegal_lose_b.kifu  kif_edge_illegal_win_w.golden.txt  kif_edge_illegal_win_w.kifu  kif_edge_jishogi.golden.txt  kif_edge_jishogi.kifu  kif_edge_no_result.golden.txt  kif_edge_no_result.kifu  kif_edge_normalize.golden.txt  kif_edge_normalize.kifu  kif_edge_nyugyoku.golden.txt  kif_edge_nyugyoku.kifu  kif_edge_sennichite.golden.txt  kif_gen_test_data_1.golden.txt  kif_gen_test_data_2.golden.txt  kif_gen_test_data_2.kifu  kif_gen_test_data_3.golden.txt  kif_gen_test_data_3.kifu  test_data_1.golden.txt  test_data_2.golden.txt  test_data_3.csa  test_data_3.golden.txt  test_data_no_moves.golden.txt
rust/maou_usi/: Cargo.toml
rust/maou_usi/src/: agent.rs  backend.rs  lib.rs  protocol.rs  stdio.rs  time.rs
(+555 files in other folders)
