[workspace]
members = ["rust/maou_io", "rust/maou_rust", "rust/maou_index", "rust/maou_shogi"]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
polars = { version = "0.53", features = [
    "lazy",
    "ipc",
    "parquet",  # Required by polars-stream 0.53 when ipc is enabled
    # Only include optional dtypes actually used (analyzed from schema.py and index.rs)
    # This replaces dtype-full which compiles 18+ optional dtypes
    # Note: Core types (i32, i64, u32, u64, f32, f64) are always available
    "dtype-i8",    # Used in HCPE and preprocessing schemas
    "dtype-i16",   # Used in HCPE and preprocessing schemas
    "dtype-u8",    # Used in board representations
    "dtype-u16",   # Used in move labels and indexing
    "dtype-date",  # Used for timestamp fields
    # u64 is a core type, no feature flag needed
] }
arrow = { version = "58.0", features = ["ipc", "ipc_compression"] }
arrow-pyarrow = { version = "58.0" }
numpy = { version = "0.28" }
thiserror = "2.0"
rustc-hash = "2.1"
arrayvec = "0.7"
tempfile = "3.26"

# Build profile optimizations for memory-constrained environments
[profile.dev]
opt-level = 0
codegen-units = 16  # Parallel codegen to reduce peak memory (required for 4GB RAM environments)
incremental = false  # Disabled for sccache compatibility
# Reduce debuginfo to save disk space and build time
debug = 1  # Line tables only

# twox-hash 2.1.2 has a bug: xxhash32.rs:298 uses `acc += len as u32`
# instead of `acc = acc.wrapping_add(len as u32)`.
# xxHash32 algorithm relies on wrapping arithmetic by design,
# but this line panics in debug builds due to Rust's overflow checks.
# Disable overflow checks for this crate only.
# Ref: https://github.com/shepmaster/twox-hash (upstream bug)
[profile.dev.package.twox-hash]
overflow-checks = false

# Temporary: optimize maou_shogi for performance testing
[profile.dev.package.maou_shogi]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1  # Sequential even for release (memory over speed)
lto = "thin"  # Thin link-time optimization
incremental = true
# Strip debuginfo for smaller binaries (maturin handles this)
strip = "debuginfo"

# Balanced profile for production builds with memory constraints
[profile.mem-opt]
inherits = "release"
opt-level = 2  # Moderate optimization
codegen-units = 1
lto = "thin"
