[project]
name = "maou"
version = "0.2.0"
description = "shogi ai"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9,<3.13"
dynamic = ["dependencies", "optional-dependencies"]

[tool.poetry]
packages = [{include = "maou", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = ">=8.1.7"
cshogi = ">=0.9.2"
tqdm = ">=4.67.1"
numpy = ">=1.19.0"
google-crc32c = ">=1.6.0"
psutil = ">=6.0.0"
torch = {version = ">=2.6.0,<=2.7.0", optional = true}
torchinfo = {version = ">=1.8.0", optional = true}
torch-tb-profiler = {version = ">=0.4.3", optional = true}
onnxruntime = {version = "*", optional = true}
onnxruntime-tools = {version = "*", optional = true}
onnxsim = {version = "*", optional = true}
onnxruntime-gpu = {version = "*", optional = true}
pynvml = {version = ">=11.4.1", optional = true}
torch-xla = {version = ">=2.6.0,<=2.7.0", optional = true}
pytorch-cuda = {version = ">=12.6,<12.9", optional = true, source = "pytorch-cuda"}
cuda-core = {version = ">=0.3.2", optional = true}
tensorrt-cu12 = {version = "*", optional = true}
tensorrt-lean-cu12 = {version = "*", optional = true}
tensorrt-dispatch-cu12 = {version = "*", optional = true}
boto3 = {version = ">=1.34.0", optional = true}
google-cloud-storage = {version = ">=2.19.0", optional = true}
google-cloud-bigquery = {version = ">=3.27.0", optional = true, extras = ["pandas"]}
google-cloud-bigquery-storage = {version = ">=2.28.0", optional = true}

[project.optional-dependencies]
cpu = ["torch", "torchinfo", "torch-tb-profiler", "onnxruntime", "onnxruntime-tools", "onnxsim"]
cuda = ["torch", "pytorch-cuda", "torchinfo", "torch-tb-profiler", "pynvml", "onnxruntime-gpu", "onnxruntime-tools", "onnxsim"]
mpu = ["torch", "torchinfo", "torch-tb-profiler", "onnxruntime-gpu", "onnxruntime-tools", "onnxsim"]
tpu = ["torch", "torchinfo", "torch-tb-profiler", "onnxruntime-gpu", "onnxruntime-tools", "onnxsim", "torch-xla"]
cpu-infer = ["onnxruntime"]
onnx-gpu-infer = ["onnxruntime-gpu"]
tensorrt-infer = ["onnxruntime-gpu", "cuda-core", "tensorrt-cu12", "tensorrt-lean-cu12", "tensorrt-dispatch-cu12"]
gcp = ["google-cloud-storage", "google-cloud-bigquery", "google-cloud-bigquery-storage"]
aws = ["boto3"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
flake8 = "^7.2.0"
yamllint = "^1.37.1"
isort = "^6.1.0"
commitizen = "^4.9.1"
pytest = "^8.4.2"
ruff = "^0.14.1"
types-tqdm = "^4.67.0.20250809"
mypy = "^1.18.2"
google-cloud-storage = "^3.4.1"
google-cloud-bigquery = {version = "^3.38.0", extras = ["pandas"]}
google-cloud-bigquery-storage = "^2.33.1"
boto3 = "^1.40.54"
autopep8 = "^2.3.2"
yapf = "^0.43.0"
netron = "^8.6.8"

[project.scripts]
maou = "maou.infra.console.app:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["./typings"]

[[tool.mypy.overrides]]
module = [
  "click",
  "cshogi",
  "pytest",
  "torchinfo",
  "google_crc32c",
  "google.cloud",
  "maou.*",
]

[tool.isort]
profile = "black"
line_length = 64

[tool.ruff]
line-length = 64
indent-width = 4

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"
