[package]
name = "maou_rust"
version = "0.3.1"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
arrow = { workspace = true }
arrow-pyarrow = { workspace = true }
numpy = { workspace = true }
maou_io = { path = "../maou_io" }
maou_index = { path = "../maou_index" }
maou_shogi = { path = "../maou_shogi" }

[dev-dependencies]
tempfile = { workspace = true }
