[package]
name = "maou_shogi"
version = "0.20.12"
edition = "2021"
description = "Shogi (Japanese chess) engine library for the maou project"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = { workspace = true }
rustc-hash = { workspace = true }
arrayvec = { workspace = true }

[features]
profile = []
tt_diag = []

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
