[package]
name = "maou_shogi"
version = "2.49.0"
edition = "2021"
description = "Shogi (Japanese chess) engine library for the maou project"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = { workspace = true }
rustc-hash = { workspace = true }
arrayvec = { workspace = true }

[features]
profile = []
tt_diag = []
verbose = []
visit_diag = []
# YaneuraOu 級 incremental effect (利き) テーブルを Board に保持・維持する (default 無効)．
# do_move/undo_move 毎に利きを incremental 更新する土台 (Stage 1)．無効時は完全にゼロコスト．
# 検証: EFFECT_VERIFY=1 + テスト test_effect_incremental_matches_fullscan．
effect_table = []

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
